syntax = "proto3";

package content.service.v1;


import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。

// 类别服务
service CategoryService {
  // 获取类别列表
  rpc ListCategory (pagination.PagingRequest) returns (ListCategoryResponse) {}

  // 获取类别数据
  rpc GetCategory (GetCategoryRequest) returns (Category) {}

  // 创建类别
  rpc CreateCategory (CreateCategoryRequest) returns (Category) {}

  // 更新类别
  rpc UpdateCategory (UpdateCategoryRequest) returns (Category) {}

  // 删除类别
  rpc DeleteCategory (DeleteCategoryRequest) returns (google.protobuf.Empty) {}
}

// 类别
message Category {
  uint32 id = 1;
  optional uint32 parentId = 2;
  optional string name = 3;
  optional string slug = 4;
  optional string description = 5;
  optional string thumbnail = 6;
  optional string password = 7;
  optional string fullPath = 8;
  optional int32 priority = 9;
  optional string createTime = 10;
  optional string updateTime = 11;
  optional uint32 postCount = 12;
}

// 回应 - 类别列表
message ListCategoryResponse {
  repeated Category items = 1;
  int32 total = 2;
}

// 请求 - 类别数据
message GetCategoryRequest {
  uint32 id = 1;
  google.protobuf.FieldMask field_mask = 2;
}

// 请求 - 创建类别
message CreateCategoryRequest {
  Category category = 1;
  optional uint32 operatorId = 2;
}

// 请求 - 更新类别
message UpdateCategoryRequest {
  uint32 id = 1;
  Category category = 2;
  optional uint32 operatorId = 3;
}

// 请求 - 删除类别
message DeleteCategoryRequest {
  uint32 id = 1;
  optional uint32 operatorId = 2;
}
